web-infras/parser/tests/fixtures/esprima/ES6/program/module/invalid-with/output.txt
[SyntaxError]: Can not use with statement in strict mode (3,1)
3|with (house) {
 |^
